# Sanguosha

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MVVM.md  README.md  analyse.md  connection.md  images.qrc  interface.md  plan.md  plan2.0.md  tobefixed.md
.github/workflows/: sgs-CICD.yml
Unity/: README.md
Unity/Scripts/Model/: Card.cs  CardManager.cs  Character.cs  Enums.cs  GameRule.cs  GameState.cs  PendingActionInfo.cs  Player.cs  Signal.cs
Unity/Scripts/View/: CardWidget.cs  GameView.cs  PlayerInfoWidget.cs
Unity/Scripts/ViewModel/: ActionViewModel.cs  CardViewModel.cs  GameViewModel.cs  PlayerViewModel.cs
build_obj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  ModelSmokeTest.vcxproj  ModelSmokeTest.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Sanguosha.sln  Sanguosha.vcxproj  Sanguosha.vcxproj.filters  SanguoshaModel.vcxproj  SanguoshaModel.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_obj/Debug/: SanguoshaModel.lib
build_obj/ModelSmokeTest.dir/Debug/: ModelSmokeTest.exe.recipe  ModelSmokeTest.ilk
build_obj/ModelSmokeTest.dir/Debug/ModelSmokeTest.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_obj/ModelSmokeTest.dir/Release/: ModelSmokeTest.exe.recipe
build_obj/ModelSmokeTest.dir/Release/ModelSmokeTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_obj/Release/: SanguoshaModel.lib
build_obj/Sanguosha.dir/Debug/: Sanguosha.exe.recipe
build_obj/Sanguosha.dir/Debug/Sanguosha.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_obj/Sanguosha.dir/Release/: Sanguosha.exe.recipe
build_obj/Sanguosha.dir/Release/Sanguosha.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_obj/SanguoshaModel.dir/Debug/SanguoshaModel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_obj/SanguoshaModel.dir/Release/SanguoshaModel.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SanguoshaModel.lastbuildstate
build_obj/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_obj/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_obj/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
build_obj/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_obj/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build_obj/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_obj/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: flowcharts.html  plan2.0.md  tobefixed.md
report/: Sanguosha.typ  final.typ
report/0.3.0/: info.json
report/0.3.0/template/: exp-info-chart.typ
src/: main.cpp
src/App/: ClientApp.cpp  ClientApp.h  GameBootstrap.cpp  GameBootstrap.h  SGSApp.cpp  SGSApp.h  ServerApp.cpp  ServerApp.h
src/Common/: CardData.h  CardDisplayData.h  CommonTypes.h  PendingActionData.h  PendingActionVM.h  PlayerData.h  PlayerDisplayData.h
src/Core/: Event.h  RandomUtils.h
src/Model/: Card.cpp  Card.h  CardManager.cpp  CardManager.h  Character.cpp  Character.h  CommonTypes.h  Event.h  GameRule.cpp  GameRule.h  GameState.cpp  GameState.h  Player.cpp  Player.h  RandomUtils.h
src/Network/: GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  MessageSerializer.cpp  MessageSerializer.h  Protocol.cpp  Protocol.h
src/View/: ActionPanelWidget.cpp  ActionPanelWidget.h  CardWidget.cpp  CardWidget.h  GameBoardWidget.cpp  GameBoardWidget.h  HandCardAreaWidget.cpp  HandCardAreaWidget.h  MainWindow.cpp  MainWindow.h  NetworkConfigDialog.cpp  NetworkConfigDialog.h  PlayerInfoWidget.cpp  PlayerInfoWidget.h  Theme.h
src/ViewModel/: ActionViewModel.cpp  ActionViewModel.h  CardViewModel.cpp  CardViewModel.h  GameViewModel.cpp  GameViewModel.h  PlayerViewModel.cpp  PlayerViewModel.h
tests/: model_test.cpp  network_test.cpp  smoke_test.cpp  view_test.cpp  viewmodel_test.cpp
